--- a/src/public/styles/main.css
+++ b/src/public/styles/main.css
@@ -1190,9 +1190,10 @@ main {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
+    -webkit-box-pack: space-evenly;
+        -ms-flex-pack: space-evenly;
+            justify-content: space-evenly;
+    text-align: center;
     line-height: 1.5;
     border-bottom: 1px solid white;
   }
